--- a/strings-methods-slicing.ipynb
+++ b/strings-methods-slicing.ipynb
@@ -16,14 +16,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I NJON\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=\"I hate python\"\n",
+    "s2=\"JK Ilove python\"\n",
+    "s3=s1[0:1]+s1[(len(s1)-1)//2:(len(s1)+2)//2]+s1[-1:]+s2[0:1]+s2[(len(s1)-1)//2:(len(s1)+2)//2]+s2[-1:]\n",
+    "print(s3.upper())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "2. Calculate the sum and the averages of the numbers in the following string while ignoring all other characters:\n",
     "\n",
@@ -32,10 +47,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum = 25 and average= 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"aa4a649##aq#2\"\n",
+    "sum=0\n",
+    "\n",
+    "for x in s:\n",
+    "    if x.isdigit()== True:\n",
+    "        sum=sum+int(x)\n",
+    "        \n",
+    "\n",
+    "s=s.replace(\"a\",\"\")\n",
+    "s=s.replace(\"#\",\"\")\n",
+    "s=s.replace(\"q\",\"\")\n",
+    "s_len=len(s)\n",
+    "avg=sum/int(len(s))\n",
+    "\n",
+    "\n",
+    "print(\"sum =\", sum,\"and average=\",avg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,6 +86,28 @@
     "    ```WORDS TAKEN DOWN - During the course of debate, exception was taken to certain words used and a demand was made to have words taken down. Mr. Culberson asked unanimous consent to withdraw the words. Without objection the words were withdrawn. The House resumed debate on S. 22 .```\n",
     "\n",
     "    **Hint:** use the method [split](https://www.w3schools.com/python/ref_string_split.asp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Culberson'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \" WORDS TAKEN DOWN - During the course of debate, exception was taken to certain words used and a demand was made to have words taken down. Mr. Culberson asked unanimous consent to withdraw the words. Without objection the words were withdrawn. The House resumed debate on S. 22 . \"\n",
+    "a = s.index(\"Culberson\")\n",
+    "s[a:a+len(\"Culberson\")]"
    ]
   },
   {
@@ -62,20 +124,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#I am confused by the two interger part in question. should it be four intergers? so I assume it is 72 and 21 therefore my code will not extract 3 and 430 557"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[73, 21]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s=\"Passed Senate with amendments by Yea-Nay Vote. 73 - 21. Record Vote Number: 3 . (text: CR S430-557 )\"\n",
+    "a= [i for i in s.split(\".\")]\n",
+    "b=[]\n",
+    "\n",
+    "for c in a:\n",
+    "    for num in c.split():\n",
+    "        if num.isdigit() and 9< int(num)<100:\n",
+    "            b.append(int(num))\n",
+    "        \n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 ('multilayer')",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "11838f79d2aaadbfa3a2adfaf35bacdebdb4e8d9b63957ddf298964812544a76"
@@ -83,5 +190,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
